# generative-ai-materials-discovery-poc

./: README.md  Untitled0.ipynb  pyproject.toml
.github/workflows/: ci.yml
configs/: data_mp.yaml  train_generator.yaml
docs/: architecture.md  proposal.md  references.md
notebooks/: 01_eda.ipynb
scripts/: 01_download_mp.py  02_train_generator.py  03_convert_to_cdvae.py
src/matgen_poc/: __init__.py  data_mp.py
src/matgen_poc/src/matgen_poc/: models.py
